[tool.poetry]
name = "iiwa-setup"
version = "0.1.0"
description = "iiwa real world setup"
authors = ["Nicholas Pfaff <nepfaff@mit.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
# drake = {version = ">=0.0.20240409", source = "drake-nightly"}
drake = "^1.28.0"
numpy = "^1.25.2"
manipulation = {git = "https://github.com/RussTedrake/manipulation.git", rev = "dd7851d2a8af76462a37f20604886872f56be5b0"}
tqdm = "^4.66.1"
hydra-core = "^1.3.2"
omegaconf = "^2.3.0"
ipython = "^8.15.0"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
black = "^23.12.1"
isort = "^5.12.0"
poetry-pre-commit-plugin = "^0.1.2"

[[tool.poetry.source]]
name = "drake-nightly"
url = "https://drake-packages.csail.mit.edu/whl/nightly/"
priority = "supplemental"

[tool.isort]
profile = 'black'
lines_between_types = 1
combine_as_imports = true
known_first_party = ['iiwa_setup']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
